--- a/aleph.js/coin-charts/deno.json
+++ b/aleph.js/coin-charts/deno.json
@@ -3,11 +3,12 @@
     "lib": ["dom", "dom.iterable", "dom.asynciterable", "dom.extras", "deno.ns"],
     "types": ["https://deno.land/x/aleph@1.0.0-beta.18/types.d.ts"],
     "jsx": "react-jsx",
-    "jsxImportSource": "https://esm.sh/react@18.2.0"
+    "jsxImportSource": "https://esm.sh/react@18.2.0",
+    "checkJs": false
   },
   "lint": {
     "files": {
-      "include": ["./components/", "./routes/", "./constants/", "./utils/"]
+      "include": ["./components/", "./routes/", "./constants/", "./utils/", "./services/"]
     },
     "rules": {
       "include": []
